--- a/src/main/webapp/css/diary.css
+++ b/src/main/webapp/css/diary.css
@@ -1,39 +1,69 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap');
+.article{
+	font-family: 'Cute Font', cursive;
+}
 
-.calendar-container {
-  width: 500px;
-  margin: 0 auto;
-  border-radius: 5px;
-  background: #f6f5f4;
-  color: #1a1a1a;
+body{
+	overflow: scroll;
 }
-h1 {
-  height: 80px;
-  line-height: 80px;
-  text-align: center;
-  font-size: 24px;
-  margin: 0;
+
+li{
+	color:white;
 }
-.calendar {
-  padding: 0 30px 30px 30px;
+
+/*ボックス*/
+.article{
+	 position: relative;
+     margin-left: 20px;
+     margin-top:45px;
+     padding: 0.5em 1em;
+     border: solid 3px #62c1ce;
+	 border-radius: 0px 10px 10px 10px;/*角を丸く*/
+	 box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);/*影*/
 }
-table {
-  width: 100%;
+
+/*タブの部分*/
+.article .article-title{
+	position: absolute;
+    display: inline-block;
+    top: -27px;
+    left: -3px;
+    padding: 0 9px;
+    height: 25px;
+    line-height: 25px;
+    font-size: 15px;
+    background: #62c1ce;
+    color: #ffffff;
+    border-radius: 5px 5px 0 0;
 }
-th, td {
-  text-align: center;
-  padding: 10px;
+
+.article p{
+	margin: 0;
+    padding: 0;
+    font-size: 28px;
 }
-th {
-  font-weight: normal;
-  font-size: 14px;
+
+/*編集・削除アイコンのみ右寄せ*/
+.sousa {
+    text-align: right;
 }
-td {
-  font-weight: bold;
+
+
+#headerbg {
+background:#7ab8bf;
+width:100%;
+min-width:1000px;
 }
-.day *:first-child {
-  color: #ff838b;
+/* ヘッダー*/
+#header       {
+width: 940px;
+height:60px;
+margin-right: auto;
+margin-left: auto;
 }
-.day *:last-child {
-  color: #6fb5ff;
+
+.home{
+	color:white;
+	margin-top:40px;
 }
