--- a/src/main/webapp/css/korean.css
+++ b/src/main/webapp/css/korean.css
@@ -1,4 +1,11 @@
 @charset "utf-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
+
+*{
+	font-family: 'Kosugi Maru', sans-serif;
+}
+
 /* 初期化*/
 ul {
     list-style-type: none;
@@ -18,7 +25,6 @@ ul {
     display: flex;
     flex-wrap: wrap;
     }
-
 
 
 /* メインコンテンツ*/
@@ -174,7 +180,7 @@ textarea#textarea-with-border {
   font-weight   : bold;              /* 太文字     */
   padding       : 3px 5px;          /* 余白       */
   border        : 1px #666666 solid; /* 罫線       */
-  background    : #99ccff;           /* 背景色     */
+  background    : #63aeb8;           /* 背景色     */
   white-space   : nowrap;
 }
  /* --- 明細のスタイル指定 ----------------------- */
