--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -1,4 +1,10 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
+
+*{
+	font-family: 'Kosugi Maru', sans-serif;
+}
+
 
 body{
 	background:#b4dbd3;
