--- a/src/main/webapp/css/editDiary.css
+++ b/src/main/webapp/css/editDiary.css
@@ -3,7 +3,12 @@
 
 *{
 	font-family: 'Kosugi Maru', sans-serif;
-	color: gray;
+	color:gray;
+}
+
+a{
+	color:white;
+
 }
 
 /* 初期化*/
@@ -26,28 +31,24 @@ body{
 	 margin-bottom:15px;
      border-radius: 10px 10px 10px 10px;
      border-color:#d3dee0;
+
 }
 
+.btn-square-so-pop {
+  position: relative;
+  display: inline-block;
+  padding: 0.5em 0.5em;
+  text-decoration: none;
+  color: #FFF;
+  background: #53b8a7;/*色*/
+  border-radius: 4px;/*角の丸み*/
+  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0, 0, 0, 0.05);
 
-/*送信ボタン*/
-.btn-square-so-pop{
-	position: relative;
-	display: inline-block;
-	padding: 0.5em 0.5em;
-	text-decoration: none;
-	color: white;
-	background:#53b8a7;
-	border-radius: 4px;/*角を丸く*/
-	box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0, 0, 0, 0.05);/*影*/
-    border: solid 2px #469c8d;/*線色*/
+  border: solid 2px #469c8d;/*線色*/
 }
 
-/*ボタンを押したとき*/
 .btn-square-so-pop:active {
-
+  /*押したとき*/
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
 
-a{
-	position:static;
-}
