--- a/src/main/webapp/css/quiz.css
+++ b/src/main/webapp/css/quiz.css
@@ -1,25 +1,19 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
 
+*{
+	font-family: 'Kosugi Maru', sans-serif;
+	color:gray;
+}
 
 .article{
-	 border-radius: 10px 10px 10px 10px;
+	 border-radius: 10px 10px 10px 10px;/*角を丸く*/
 	 margin-bottom:10px;
+	 background:white;
+	 font-weight:bold;/*太字*/
+	 font-size:20px;
 }
 
-#headerbg {
-background:#7ab8bf;
-width:100%;
-min-width:1000px;
-}
-/* ヘッダー*/
-#header       {
-width: 940px;
-height:60px;
-margin-right: auto;
-margin-left: auto;
-}
-
-.home{
-	color:white;
-	margin-top:40px;
+body{
+	background:#b4dbd3;
 }
