--- a/src/main/webapp/css/add.css
+++ b/src/main/webapp/css/add.css
@@ -49,5 +49,15 @@ body{
 }
 
 a{
-	position:static;
+	color:gray;
+
+}
+
+a:hover {
+   font-size: 25px;
+}
+
+p{
+	text-align: right;
+	margin-right:15px;
 }
