--- a/src/main/webapp/css/diary.css
+++ b/src/main/webapp/css/diary.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gaegu&display=swap');
 .article{
-	font-family: 'Cute Font', cursive;
+	font-family: 'Gaegu', cursive;
 }
 
 body{
