--- a/src/main/webapp/css/edit.css
+++ b/src/main/webapp/css/edit.css
@@ -51,3 +51,17 @@ body{
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
 
+a{
+	color:gray;
+
+}
+
+a:hover {
+   font-size: 25px;
+}
+
+p{
+	text-align: right;
+	margin-right:15px;
+}
+
