--- a/src/main/webapp/css/quiz.css
+++ b/src/main/webapp/css/quiz.css
@@ -8,12 +8,29 @@
 
 .article{
 	 border-radius: 10px 10px 10px 10px;/*角を丸く*/
-	 margin-bottom:10px;
 	 background:white;
 	 font-weight:bold;/*太字*/
 	 font-size:20px;
+	 margin-left:auto;
+     margin-right:auto;
+     margin-bottom:10px;
+     text-align:left;
+     width:600px;
 }
 
 body{
 	background:#b4dbd3;
+	text-align:center;
+}
+
+.main{
+	margin-top:80px;
+}
+
+.b{
+	text-align: right;
+	margin-right:15px;
+}
+.b:hover {
+   font-size: 25px;
 }
